Demo-1/deploy-customer.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer
  labels:
    app: customer
    service: customer
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: customer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
      version: v1
  template:
    metadata:
      labels:
        app: customer
        version: v1
    spec:
      serviceAccountName: customer
      containers:
      - image: docker.io/murphye/customer-service:latest
        name: customer
        ports:
        - containerPort: 8080
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: "app"
                operator: In
                values:
                - person
                - name
                # Have microservices deployed on separate nodes
            topologyKey: "kubernetes.io/hostname"
