Demo-1/deploy-person.yaml
apiVersion: v1
kind: Service
metadata:
  name: person
  labels:
    app: person
    service: person
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: person
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: person
spec:
  replicas: 1
  selector:
    matchLabels:
      app: person
      version: v1
  template:
    metadata:
      labels:
        app: person
        version: v1
    spec:
      serviceAccountName: person
      containers:
      - image: docker.io/murphye/person-service:latest
        name: person
        ports:
        - containerPort: 8080
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: "app"
                operator: In
                values:
                - customer
                - name
                # Have microservices deployed on separate nodes
            topologyKey: "kubernetes.io/hostname"
