Demo-1/deploy-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
    service: postgres
spec:
  ports:
  - name: tcp-postgres
    port: 5432
    targetPort: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      version: v1
  template:
    metadata:
      labels:
        app: postgres
        version: v1
    spec:
      serviceAccountName: postgres
      containers:
      - image: postgres:13
        imagePullPolicy: "IfNotPresent"
        name: postgres
        ports:
        - containerPort: 5432
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: "app"
                operator: In
                values:
                - person
                - name
            topologyKey: "kubernetes.io/hostname"
